overflow issue

--- a/src/_includes/css/site.css
+++ b/src/_includes/css/site.css
@@ -280,15 +280,15 @@ body {
   display: block;
   position: absolute;
   bottom: 0;
-  left: -10px;
-  right: -10px;
+  left: 0;
+  right: 0;
   z-index: 1;
   height: 32px;
   background-color: white;
   background-image: url('/images/bg-wave.svg');
   background-position: center top;
   background-repeat: no-repeat;
-  background-size: 100% auto;
+  background-size: cover;
 }
 
 .page-title {
